fixes z-index sidebar

--- a/src/blocks/sidebar/sidebar.less
+++ b/src/blocks/sidebar/sidebar.less
@@ -1,5 +1,5 @@
 .sidebar {
-  z-index: 9999!important;
+  z-index: 8000!important;
   position: relative;
   
   &__content {
